--- a/python/3.6/scrapyd/Dockerfile
+++ b/python/3.6/scrapyd/Dockerfile
@@ -10,11 +10,14 @@ RUN     apk update && \
             libxml2-dev \
             libxslt-dev \
             libc-dev \
+            jpeg-dev \
+            zlib-dev \
             libffi-dev \
             openssl-dev && \
         ln -f /usr/local/bin/python3 /usr/local/bin/python ; \
         pip install cryptography ; \
         pip install lxml; \
         pip install scrapyd ; \
+        pip install oss2 pyzbar pillow; \
         apk del .dep && \
         rm -rf ~/.cache
