opt 升级eleasticsearch至6.5.4版本

--- a/elk/es/Dockerfile
+++ b/elk/es/Dockerfile
@@ -1,11 +1,9 @@
-FROM        java:8u111
+FROM        fwyit/java:8u111
 
-ENV         GPG_KEY=46095ACC8548582C1A2699A9D27D666CD88E42B4 \
-            PATH=/opt/elasticsearch/bin:$PATH \
+ENV         PATH=/opt/elasticsearch/bin:$PATH \
             ES_HOME=/opt/elasticsearch \
             ES_USER=elasticsearch \
-            ES_VERSION=5.6.9 \
-            ES_SHA1=9dae4794cad7b804bffe09d03c94ab25b3e9c586
+            ES_VERSION=6.5.4
 
 RUN         addgroup -S $ES_USER && \
             adduser -S -G $ES_USER $ES_USER && \
@@ -19,8 +17,9 @@ RUN         addgroup -S $ES_USER && \
                 tar && \
             repo="https://artifacts.elastic.co/downloads" && \
             app="elasticsearch-${ES_VERSION}" && \
-            curl -o /tmp/$app.tar.gz    $repo/elasticsearch/$app.tar.gz && \
-            echo "$ES_SHA1  /tmp/$app.tar.gz" | sha1sum -c && \
+            curl -Lo /tmp/$app.tar.gz $repo/elasticsearch/$app.tar.gz && \
+            curl -Lo /tmp/$app.sha $repo/elasticsearch/$app.tar.gz.sha512 && \
+            echo "$(cat /tmp/$app.sha)  /tmp/$app.tar.gz" | sha1sum -c && \
             tar -zxf /tmp/$app.tar.gz -C $(dirname $ES_HOME) && \
             mv $(dirname $ES_HOME)/elasticsearch-${ES_VERSION} $ES_HOME && \
             apk del .deps && \
