--- a/elk/kb/Dockerfile
+++ b/elk/kb/Dockerfile
@@ -32,7 +32,7 @@ VOLUME      $KB_HOME/data
 
 COPY        ./docker-entrypoint.sh /usr/bin/elk.sh
 
-EXPOSE      9200 9300
+# EXPOSE      9200 9300
 
 ENTRYPOINT  ["sh", "/usr/bin/elk.sh"]
 CMD         ["kibana"]
