--- a/elk/kb/Dockerfile
+++ b/elk/kb/Dockerfile
@@ -18,9 +18,8 @@ RUN         addgroup -S $KB_USER && \
             repo="https://artifacts.elastic.co/downloads" && \
             app="kibana-${KB_VERSION}" && \
             cd /tmp && \
-            curl -Lo $app.tar.gz $repo/kibana/$app.tar.gz && \
-            curl -Lo $app.sha $repo/kibana/$app.tar.gz.sha512 && \
-            cat $app.sha && sha512sum $app.tar.gz && \
+            curl -Lo $app.tar.gz $repo/kibana/$app-linux-x86_64.tar.gz && \
+            curl -Lo $app.sha $repo/kibana/$app-linux-x86_64.tar.gz.sha512 && \
             cat $app.sha | sha512sum -c && \
             tar -zxf /tmp/$app.tar.gz -C $(dirname $KB_HOME) && \
             mv $(dirname $KB_HOME)/kibana-${KB_VERSION} $KB_HOME && \
