--- a/jdk/sun/Dockerfile
+++ b/jdk/sun/Dockerfile
@@ -1,81 +1,78 @@
 FROM        fwyit/alpine:cn
 MAINTAINER  Jam < ops@doat.cc > 
+# AlpineLinux with a glibc-2.28-r0 and Oracle Java 8
 
-ENV         JAVA_VERSION=8u111 \
-            JAVA_VERSION_MAJOR=8 \
+# Java Version and other ENV
+ENV         JAVA_VERSION_MAJOR=8 \
             JAVA_VERSION_MINOR=111 \
             JAVA_VERSION_BUILD=14 \
             JAVA_PACKAGE=jdk \
             JAVA_JCE=unlimited \
-            JAVA_HOME=/usr/lib/jvm/jdk1.8.0_111 \
-            PATH=$PATH:usr/lib/jvm/jdk1.8.0_111/bin
+            JAVA_HOME=/opt/jdk \
+            PATH=${PATH}:/opt/jdk/bin \
+            GLIBC_REPO=https://github.com/sgerrand/alpine-pkg-glibc \
+            GLIBC_VERSION=2.28-r0 \
+            LANG=C.UTF-8
 
-RUN         apk update && \
-            apk add --no-cache --virtual .deps \
-                bash \
-                curl \
-                gzip \
-                libstdc++ && \
-            ( /usr/glibc-compat/bin/localedef --force --inputfile POSIX --charmap UTF-8 C.UTF-8 2>/dev/null || true ) && \
+# do all in one step
+RUN         set -ex && \
+            [[ ${JAVA_VERSION_MAJOR} != 7 ]] || ( echo >&2 'Oracle no longer publishes JAVA7 packages' && exit 1 ) && \
+            apk -U upgrade && \
+            apk add libstdc++ curl ca-certificates bash && \
+            for pkg in glibc-${GLIBC_VERSION} glibc-bin-${GLIBC_VERSION} glibc-i18n-${GLIBC_VERSION}; do curl -sSL ${GLIBC_REPO}/releases/download/${GLIBC_VERSION}/${pkg}.apk -o /tmp/${pkg}.apk; done && \
+            apk add --allow-untrusted /tmp/*.apk && \
+            rm -v /tmp/*.apk && \
+            ( /usr/glibc-compat/bin/localedef --force --inputfile POSIX --charmap UTF-8 C.UTF-8 || true ) && \
             echo "export LANG=C.UTF-8" > /etc/profile.d/locale.sh && \
             /usr/glibc-compat/sbin/ldconfig /lib /usr/glibc-compat/lib && \
-            mkdir -p $(dirname $JAVA_HOME) && \
-            tmpFile=/tmp/java.tar.gz && \
-            url="http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz" && \
-            checkUrl="https://www.oracle.com/webfolder/s/digest/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}checksum.html" && \
-            policyUrl="http://download.oracle.com/otn-pub/java/jce/${JAVA_VERSION_MAJOR}/jce_policy-${JAVA_VERSION_MAJOR}.zip" && \
-            cookie="Cookie: oraclelicense=accept-securebackup-cookie" && \
-            echo "curl -jksSLOH '$cookie' $url" && \
-            curl -jksSLH "$cookie" -o $tmpFile $url && \
-            JAVA_PACKAGE_SHA256=$( curl -sSL $checkUrl | \
-                grep -E "${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64\.tar\.gz" | \
-                grep -Eo '(sha256: )[^<]+' | cut -d: -f2 | xargs) && \
-            echo "${JAVA_PACKAGE_SHA256}  $tmpFile" > $tmpFile.sha256 && \
-            echo "calsum:   $(sha256sum $tmpFile)" && \
-            echo "check:    $(cat $tmpFile.sha256)" && \
-            sha256sum -c $tmpFile.sha256 || echo "已经检测不匹配" && \
-            gunzip $tmpFile && \
-            tar -xf ${tmpFile/.gz/} -C $JAVA_HOME && \
+            mkdir /opt && \
+            curl -jksSLH "Cookie: oraclelicense=accept-securebackup-cookie" -o /tmp/java.tar.gz \
+              http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz && \
+            JAVA_PACKAGE_SHA256=$(curl -sSL https://www.oracle.com/webfolder/s/digest/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}checksum.html | grep -E "${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64\.tar\.gz" | grep -Eo '(sha256: )[^<]+' | cut -d: -f2 | xargs) && \
+            echo "${JAVA_PACKAGE_SHA256}  /tmp/java.tar.gz" > /tmp/java.tar.gz.sha256 && \
+            sha256sum -c /tmp/java.tar.gz.sha256 && \
+            gunzip /tmp/java.tar.gz && \
+            tar -C /opt -xf /tmp/java.tar && \
+            ln -s /opt/jdk1.${JAVA_VERSION_MAJOR}.0_${JAVA_VERSION_MINOR} /opt/jdk && \
             if [ "${JAVA_JCE}" == "unlimited" ]; then echo "Installing Unlimited JCE policy" >&2 && \
-                curl -jksSLH "$cookie" -o /tmp/jce_policy-${JAVA_VERSION_MAJOR}.zip $policyUrl && \
-                unzip /tmp/jce_policy-${JAVA_VERSION_MAJOR}.zip -d /tmp && \
-                cp -v /tmp/UnlimitedJCEPolicyJDK8/*.jar $JAVA_HOME/jre/lib/security; \
+              curl -jksSLH "Cookie: oraclelicense=accept-securebackup-cookie" -o /tmp/jce_policy-${JAVA_VERSION_MAJOR}.zip \
+                http://download.oracle.com/otn-pub/java/jce/${JAVA_VERSION_MAJOR}/jce_policy-${JAVA_VERSION_MAJOR}.zip && \
+              cd /tmp && unzip /tmp/jce_policy-${JAVA_VERSION_MAJOR}.zip && \
+              cp -v /tmp/UnlimitedJCEPolicyJDK8/*.jar /opt/jdk/jre/lib/security; \
             fi && \
-            sed -i "s/#networkaddress.cache.ttl=-1/networkaddress.cache.ttl=10/" $JAVA_HOME/jre/lib/security/java.security && \
-            rm -rf \
-                ${JAVA_HOME}/*src.zip \
-                ${JAVA_HOME}/lib/missioncontrol \
-                ${JAVA_HOME}/lib/visualvm \
-                ${JAVA_HOME}/lib/*javafx* \
-                ${JAVA_HOME}/jre/plugin \
-                ${JAVA_HOME}/jre/bin/javaws \
-                ${JAVA_HOME}/jre/bin/jjs \
-                ${JAVA_HOME}/jre/bin/orbd \
-                ${JAVA_HOME}/jre/bin/pack200 \
-                ${JAVA_HOME}/jre/bin/policytool \
-                ${JAVA_HOME}/jre/bin/rmid \
-                ${JAVA_HOME}/jre/bin/rmiregistry \
-                ${JAVA_HOME}/jre/bin/servertool \
-                ${JAVA_HOME}/jre/bin/tnameserv \
-                ${JAVA_HOME}/jre/bin/unpack200 \
-                ${JAVA_HOME}/jre/lib/javaws.jar \
-                ${JAVA_HOME}/jre/lib/deploy* \
-                ${JAVA_HOME}/jre/lib/desktop \
-                ${JAVA_HOME}/jre/lib/*javafx* \
-                ${JAVA_HOME}/jre/lib/*jfx* \
-                ${JAVA_HOME}/jre/lib/amd64/libdecora_sse.so \
-                ${JAVA_HOME}/jre/lib/amd64/libprism_*.so \
-                ${JAVA_HOME}/jre/lib/amd64/libfxplugins.so \
-                ${JAVA_HOME}/jre/lib/amd64/libglass.so \
-                ${JAVA_HOME}/jre/lib/amd64/libgstreamer-lite.so \
-                ${JAVA_HOME}/jre/lib/amd64/libjavafx*.so \
-                ${JAVA_HOME}/jre/lib/amd64/libjfx*.so \
-                ${JAVA_HOME}/jre/lib/ext/jfxrt.jar \
-                ${JAVA_HOME}/jre/lib/ext/nashorn.jar \
-                ${JAVA_HOME}/jre/lib/oblique-fonts \
-                ${JAVA_HOME}/jre/lib/plugin.jar \
-                && \
-            echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf && \
-            apk del .deps && \
-            rm -rf /tmp/* /var/cache/apk/*
+            sed -i s/#networkaddress.cache.ttl=-1/networkaddress.cache.ttl=10/ $JAVA_HOME/jre/lib/security/java.security && \
+            apk del curl glibc-i18n && \
+            rm -rf /opt/jdk/*src.zip \
+                   /opt/jdk/lib/missioncontrol \
+                   /opt/jdk/lib/visualvm \
+                   /opt/jdk/lib/*javafx* \
+                   /opt/jdk/jre/plugin \
+                   /opt/jdk/jre/bin/javaws \
+                   /opt/jdk/jre/bin/jjs \
+                   /opt/jdk/jre/bin/orbd \
+                   /opt/jdk/jre/bin/pack200 \
+                   /opt/jdk/jre/bin/policytool \
+                   /opt/jdk/jre/bin/rmid \
+                   /opt/jdk/jre/bin/rmiregistry \
+                   /opt/jdk/jre/bin/servertool \
+                   /opt/jdk/jre/bin/tnameserv \
+                   /opt/jdk/jre/bin/unpack200 \
+                   /opt/jdk/jre/lib/javaws.jar \
+                   /opt/jdk/jre/lib/deploy* \
+                   /opt/jdk/jre/lib/desktop \
+                   /opt/jdk/jre/lib/*javafx* \
+                   /opt/jdk/jre/lib/*jfx* \
+                   /opt/jdk/jre/lib/amd64/libdecora_sse.so \
+                   /opt/jdk/jre/lib/amd64/libprism_*.so \
+                   /opt/jdk/jre/lib/amd64/libfxplugins.so \
+                   /opt/jdk/jre/lib/amd64/libglass.so \
+                   /opt/jdk/jre/lib/amd64/libgstreamer-lite.so \
+                   /opt/jdk/jre/lib/amd64/libjavafx*.so \
+                   /opt/jdk/jre/lib/amd64/libjfx*.so \
+                   /opt/jdk/jre/lib/ext/jfxrt.jar \
+                   /opt/jdk/jre/lib/ext/nashorn.jar \
+                   /opt/jdk/jre/lib/oblique-fonts \
+                   /opt/jdk/jre/lib/plugin.jar \
+                   /tmp/* /var/cache/apk/* && \
+            echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf
 
