--- a/spt/ent/Dockerfile
+++ b/spt/ent/Dockerfile
@@ -13,7 +13,7 @@ RUN     cd /tmp && \
             "https://www.splunk.com/bin/splunk/DownloadActivityServlet?architecture=x86_64&platform=linux&version=${ver}&product=splunk&filename=$app&wget=true" && \
         base=$(dirname $SPLUNK_HOME) && \
         mkdir -p $base && \
-        tar -zxvf $app -C $bas && \
+        tar -zxvf $app -C $base && \
         rm -rf /tmp/* /var/cache/apk/*
 
 ADD     init.sh /usr/bin/spt
