try 尝试将pillow项目整合到整体项目

--- a/sentry/Dockerfile
+++ b/sentry/Dockerfile
@@ -5,12 +5,42 @@ RUN     repo ali && \
         apk add --no-cache \
             python \
             && \
-        apk add --no-cache --virtual .deps\
+        apk add --no-cache --virtual .deps \
+            python2-dev \
+            musl-dev \
+            linux-headers \
+            py2-pip \
             gcc \
             g++ \
-            python-dev \
+            curl \
+            postgresql-dev \
+            libffi-dev \
+            libxml2-dev \
+            libxslt-dev \
+            libc-dev \
+            jpeg-dev \
+            zlib-dev \
+            libffi-dev \
             && \
-        python -m pip install sentry django-sentry -i https://pypi.douban.com/simple/ && \
+        cd /tmp/ && \
+        curl -LO https://raw.githubusercontent.com/getsentry/sentry/master/requirements-base.txt && \
+        index=https://pypi.douban.com/simple/ && \
+        python -m pip install -i $index milksnake 'pytest<3.6' && \
+        python -m pip install -i $index 'pillow<=4.2.1' && \
+        python -m pip install -i $index -r requirements-base.txt && \
+        repo reset && \
+        apk del .deps && \
+        rm -rf /tmp/* /var/cache/apk/* /root/*
+
+RUN     repo ali && \
+        apk update && \
+        apk add --no-cache \
+            python \
+            libxml2 \
+            libxslt && \
+        apk add --no-cache --virtual .dep \
+            gcc \
+            && \
         repo reset && \
         apk del .deps && \
         rm -rf /tmp/* /var/cache/apk/* /root/*
