--- a/perl/Dockerfile
+++ b/perl/Dockerfile
@@ -17,7 +17,7 @@ RUN     cd /tmp/ && \
         app=awstats-${AWS_VER}.tar.gz && \
         curl -Lo $app https://prdownloads.sourceforge.net/awstats/$app && \
         mkdir -p /usr/local && \
-        tar -zxvf $app -C /usr/local && \
+        tar -zxf $app -C /usr/local && \
         ln -sf /usr/local/awstats-${AWS_VER} /usr/local/awstats && \
         cp -rf /usr/local/awstats/wwwroot/* /var/www/ && \
         cp -f /usr/local/awstats/tools/nginx/awstats-fcgi.php /var/www/cgi-bin/fcgi.php
