try 尝试显示下载地址

--- a/java/12/Dockerfile
+++ b/java/12/Dockerfile
@@ -11,8 +11,9 @@ ENV     JAVA_VERSION=12 \
 RUN     ver="${JAVA_VERSION}.${JAVA_UPDATE}.${JAVA_BUILD}" && \
         app=jdk-$ver_linux-x64_bin.tar.gz && \
         cd /tmp/ && \
-        wget --header "Cookie: oraclelicense=accept-securebackup-cookie;" \
-            "https://download.oracle.com/otn-pub/java/jdk/$ver+${JAVA_VERSION}/$JAVA_SID/$app" && \
+        url="https://download.oracle.com/otn-pub/java/jdk/$ver+${JAVA_VERSION}/$JAVA_SID/$app" && \
+        echo $url && \
+        wget --header "Cookie: oraclelicense=accept-securebackup-cookie;" $url && \
         tar -zxvf $app && \
         mkdir -p $JAVA_HOME && \
         mv jdk1.${JAVA_VERSION}.0_${JAVA_UPDATE}/* $JAVA_HOME/ && \
