--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,18 +1,12 @@
-FROM    fwyit/alpine:cn
-
-RUN     repo ali && \
-        apk update && \
-        apk add --no-cache \
-            nodejs-npm \
-            yarn \
-            && \
-        repo reset && \
-        rm -rf /root/cache/* /tmp/*
+FROM    node:8-alpine
 
 RUN     NPM_CN=https://registry.npm.taobao.org/ && \
         npm config set registry $NPM_CN && \
         yarn config set registry $NPM_CN && \
-        npm install -g --registry=https://registry.npm.taobao.org/ nbnpm && \
+        cd /usr/local/lib/node_modules && \
+        npm install --registry=https://registry.npm.taobao.org/ nbnpm && \
+        rm -rf core* && \
+        export PATH=\$PATH:`pwd`/node_modules/.bin/ && \
         rm -rf /root/.npm/ /tmp/*
 
 ADD     init.sh /usr/bin/node.sh
